# opencv_tutorial

./: .gitignore
blending_two_images/: main.cpp
changing_the_contrast_and_brightness_of_an_image/: CMakeLists.txt  basic_linear_transform.cpp  changing_contrast_brightness_image.cpp
how_to_scan_images/: CMakeLists.txt  how_to_scan_image.cpp
mat_mask_operations/: CMakeLists.txt  mat_mask_operations.cpp
mat_test/: CMakeLists.txt  main.cpp
operation_with_image/: CMakeLists.txt  operation_with_image.cpp
